Bugfix: scale footer down on mobile

--- a/styles/index.css
+++ b/styles/index.css
@@ -276,6 +276,11 @@ footer p  {
         font-size: 20px;
         padding-top: 30px;
     }
+
+    #footer {
+        font-size: 14px;
+        padding: 15px; 
+    }
 }
 
 @media only screen and (min-width: 800px) {
